<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btApply"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/contentBackground"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:contentDescription="@string/description_image"
                    android:scaleType="centerCrop"
                    app:layout_collapseParallaxMultiplier="0.6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="#ff9999" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/contentBackground"
                android:orientation="vertical"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LabelColorDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_work_title_label" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/ContentColorDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/contentTranslucentBackground"
                    android:hint="@string/form_work_title_hint" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/LabelColorDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_work_summary_label" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/ContentColorDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/form_work_summary_hint"
                    android:minHeight="128dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/form_work_button_text"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>