<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ContentLabelColorDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/label_original_run" />

        <TextView
            android:id="@+id/tvOriginalRun"
            style="@style/ContentColorDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            tools:text="2020年7月7日~9月22日" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ContentLabelColorDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/label_episodes" />

        <TextView
            android:id="@+id/tvEpisodes"
            style="@style/ContentColorDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            tools:text="12" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ContentLabelColorDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/label_watched_time" />

        <TextView
            android:id="@+id/tvWatchedTime"
            style="@style/ContentColorDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            tools:text="2022年5月12日" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>